bone rotation #46325

Closed
opened 2015-09-30 06:09:09 +02:00 by Predrag Lazic · 15 comments

System Information
macintosh osx 10.7.5 \ AMD Radeon HD 6750M

Blender Version
Broken: 2.76 - e24ea81
Worked: 2.75 - c27589e

Short description of error
selecting bone tip and rotating doesn't move it.

Exact steps for others to reproduce the error
1 - make armature with single bone
2 - enter edit mode. select head alone and rotate.

**System Information** macintosh osx 10.7.5 \ AMD Radeon HD 6750M **Blender Version** Broken: 2.76 - e24ea81 Worked: 2.75 - c27589e **Short description of error** selecting bone tip and rotating doesn't move it. **Exact steps for others to reproduce the error** 1 - make armature with single bone 2 - enter edit mode. select head alone and rotate.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @particl3s

Added subscriber: @particl3s

Added subscriber: @sindra1961

Added subscriber: @sindra1961

Bone does not surely rotate even if I choose bone tail and rotate it.

version: 2.76 (sub 1), branch: master, commit date: 2015-09-29 23:58, hash: 491b189, type: Release

Bone does not surely rotate even if I choose bone tail and rotate it. version: 2.76 (sub 1), branch: master, commit date: 2015-09-29 23:58, hash: 491b189, type: Release

Added subscriber: @mont29

Added subscriber: @mont29

Was introduced by 291152e127

Was introduced by 291152e127

Arg! sorry, meant 312cb0a957

Arg! sorry, meant 312cb0a957

Added subscriber: @Sergey

Added subscriber: @Sergey

@mont29, are you sure about the revision? The one you mentioned here made change in code inside ifdef which is never being compiled in unless WITH_CYCLES_DEBUG is explicitly enabled in CMake config.

P.S. Actually nevermind. Bastien already gave correct hash. Were looking into same report at the same time :)

@mont29, are you sure about the revision? The one you mentioned here made change in code inside `ifdef` which is never being compiled in unless `WITH_CYCLES_DEBUG` is explicitly enabled in CMake config. P.S. Actually nevermind. Bastien already gave correct hash. Were looking into same report at the same time :)

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@ideasman42 not sure what to do here… The old behavior is rather odd to begin with, rotation with only tip selected does not make much sense imho?

@ideasman42 not sure what to do here… The old behavior is rather odd to begin with, rotation with only tip selected does not make much sense imho?

@mont29. rotation with just tip selected was a quick way to rotate bone around it's head without switching to Individual Origins pivot point.

Assigning regressions project since technically it a regression in behavior since previous release.

@mont29. rotation with just tip selected was a quick way to rotate bone around it's head without switching to `Individual Origins` pivot point. Assigning regressions project since technically it a regression in behavior since previous release.
Bastien Montagne self-assigned this 2015-09-30 10:48:01 +02:00

Oki, then let's just make an exception here for rotation mode…

Oki, then let's just make an exception here for rotation mode…

This issue was referenced by 1030b22b0a

This issue was referenced by 1030b22b0ae67aa648da5a77c38a361bb2d8cd6f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46325
No description provided.