Fix T46325: Armature: No more possible to rotate a bone with only its tip selected, in EditMode.

Regression from rB312cb0a957b81233ea, now we make an exception for TFM_ROTATION mode...